Fixed runtime config