@@ -3,23 +3,26 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
         >
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.opensocial</groupId>
+        <artifactId>rave-chemistry</artifactId>
+        <version>0.1-SNAPSHOT</version>
+    </parent>
 
     <groupId>org.opensocial</groupId>
-    <artifactId>rave-chemistry</artifactId>
-    <name>Apache Rave &amp; Chemistry Integration</name>
-    <description>Demo integration of Apache Rave &amp; Apache Chemistry via gadgets and co-deployed war</description>
-    <packaging>pom</packaging>
-    <version>0.1-SNAPSHOT</version>
+    <artifactId>rave-chemistry-package</artifactId>
+    <name>Apache Rave &amp; Chemistry Integration Packager</name>
+    <description>Packaging and running of the integrated piece</description>
+    <packaging>war</packaging>
+
     <properties>
-        <apache.rave.version>0.14-SNAPSHOT</apache.rave.version>
-        <apache.chemistry.version>0.7</apache.chemistry.version>
         <javax.mail.version>1.4.4</javax.mail.version>
         <jsp-api.version>2.1</jsp-api.version>
         <el-api.version>1.0</el-api.version>
         <cargo.version>1.1.0</cargo.version>
         <cargo.debug.address>8000</cargo.debug.address>
         <cargo.debug.suspend>n</cargo.debug.suspend>
-        <cargo.args />
+        <cargo.args/>
         <cargo.version>1.1.0</cargo.version>
         <javaagent/>
         <!-- Force maven-filesync-plugin rewrite the Eclipse FileSync plugin configuration with
@@ -30,65 +33,36 @@
 
     </properties>
 
-    <repositories>
-        <repository>
-            <id>apache.snapshots</id>
-            <url>http://repository.apache.org/snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <modules>
-        <module>gadgets</module>
-        <module>portal</module>
-    </modules>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.apache.rave</groupId>
-                <artifactId>rave-portal</artifactId>
-                <version>${apache.rave.version}</version>
-                <type>war</type>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.rave</groupId>
-                <artifactId>rave-demo-gadgets</artifactId>
-                <version>${apache.rave.version}</version>
-                <type>war</type>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.chemistry.opencmis</groupId>
-                <artifactId>chemistry-opencmis-server-inmemory</artifactId>
-                <version>${apache.chemistry.version}</version>
-                <type>war</type>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.rave</groupId>
-                <artifactId>rave-shindig</artifactId>
-                <version>${apache.rave.version}</version>
-                <type>war</type>
-            </dependency>
-            <dependency>
-                <groupId>org.opensocial</groupId>
-                <artifactId>rave-chemistry-gadgets</artifactId>
-                <version>${project.version}</version>
-                <type>war</type>
-            </dependency>
-            <dependency>
-                <groupId>org.opensocial</groupId>
-                <artifactId>rave-chemistry-portal</artifactId>
-                <version>${project.version}</version>
-                <type>war</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.chemistry.opencmis</groupId>
+            <artifactId>chemistry-opencmis-server-inmemory</artifactId>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.rave</groupId>
+            <artifactId>rave-shindig</artifactId>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.opensocial</groupId>
+            <artifactId>rave-chemistry-gadgets</artifactId>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>org.opensocial</groupId>
+            <artifactId>rave-chemistry-portal</artifactId>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+        </dependency>
+    </dependencies>
     <profiles>
         <profile>
             <id>dist</id>
@@ -157,7 +131,7 @@
                     <configuration>
                         <properties>
                             <cargo.jvmargs>
-                                <![CDATA[-Dh2.bindAddress="localhost" -Xdebug -Xrunjdwp:transport=dt_socket,address=${cargo.debug.address},server=y,suspend=${cargo.debug.suspend} -noverify ${javaagent} ${cargo.args}]]>
+                                <![CDATA[-Xms512m -XX:MaxPermSize=128m -Dh2.bindAddress="localhost" -Xdebug -Xrunjdwp:transport=dt_socket,address=${cargo.debug.address},server=y,suspend=${cargo.debug.suspend} -noverify ${javaagent} ${cargo.args}]]>
                             </cargo.jvmargs>
                             <cargo.tomcat.context.reloadable>true</cargo.tomcat.context.reloadable>
                         </properties>
@@ -202,15 +176,18 @@
                         <containerId>tomcat6x</containerId>
                         <timeout>180000</timeout>
                         <zipUrlInstaller>
-                            <downloadDir>${settings.localRepository}/org/codehaus/cargo/cargo-container-archives
-                            </downloadDir>
+                            <downloadDir>${settings.localRepository}/org/codehaus/cargo/cargo-container-archives</downloadDir>
                             <url>
                                 http://archive.apache.org/dist/tomcat/tomcat-6/v6.0.35/bin/apache-tomcat-6.0.35.tar.gz
                             </url>
                         </zipUrlInstaller>
                         <systemProperties>
                             <net.sf.ehcache.skipUpdateCheck>true</net.sf.ehcache.skipUpdateCheck>
-                            <!-- Documentation: http://incubator.apache.org/rave/documentation/host-configuration.html -->
+                            <!--  un-comment following property for: Loading the SizeOfAgent will probably fail,
+                            as you are running on Apple OS X and have a value set for java.io.tmpdir  -->
+                            <!-- <net.sf.ehcache.pool.sizeof.AgentSizeOf.bypass>true</net.sf.ehcache.pool.sizeof.AgentSizeOf.bypass>  -->
+
+                            <!-- Documentation: http://rave.apache.org/documentation/host-configuration.html -->
                             <!--
                                 <portal.override.properties>/path/to/custom.portal.properties</portal.override.properties>
                                 <rave-shindig.override.properties>/path/to/custom.shindig.properties</rave-shindig.override.properties>
@@ -219,6 +196,18 @@
                                 <shindig.contextroot />
                             -->
                         </systemProperties>
+                        <dependencies>
+                            <dependency>
+                                <groupId>javax.mail</groupId>
+                                <artifactId>mail</artifactId>
+                                <classpath>shared</classpath>
+                            </dependency>
+                            <dependency>
+                                <groupId>javax.activation</groupId>
+                                <artifactId>activation</artifactId>
+                                <classpath>shared</classpath>
+                            </dependency>
+                        </dependencies>
                     </container>
                 </configuration>
             </plugin>
